trying to fix laggy animation in splash page.

--- a/templates/candymain.html
+++ b/templates/candymain.html
@@ -51,13 +51,13 @@
             <a href="/about" class="democracy-trumped active foot-link" data-link="Democracy Trumped">About</a>
           </li>
           <li class="foot-box" data-num="2">
-            <a href="#" class="no-planet-b foot-link" data-link="No planet B">Why WiSDOM?</a>
+            <a href="/why" class="no-planet-b foot-link" data-link="No planet B">Why WiSDOM?</a>
           </li>
           <li class="foot-box" data-num="3">
-            <a href="#" class="secure-insecure foot-link" data-link="Secure / Insecure"> Credit Card Demo </a>
+            <a href="/creditcard" class="secure-insecure foot-link" data-link="Secure / Insecure"> Credit Card Demo </a>
           </li>
           <li class="foot-box" data-num="4">
-            <a href="#" class="maga foot-link" data-link="maga"> Comparison </a>
+            <a href="/comp" class="maga foot-link" data-link="maga"> Comparison </a>
           </li>
 
         </ul>
