--- a/static/aboutstyle.css
+++ b/static/aboutstyle.css
@@ -43,10 +43,10 @@ header {
 }
 
 .background {
-  /*background: */
-  /*  url("http://img.talkandroid.com/uploads/2013/03/htc-sense-5-wallpaper-3.jpg")*/
-  background-color: #2c2c2c;
-    /*repeat;*/
+  background:
+    url("../static/backdrop.jpg")
+  /*background-color: #2c2c2c;*/
+    repeat;
   background-size: 100% auto;
   position: fixed;
   width: 100%;
