--- a/templates/about.html
+++ b/templates/about.html
@@ -18,8 +18,8 @@
 
   <article class="wrapper">
     <header>
-      <h1 class="pageTitle">Parallax scrolling</h1>
-      <h2 class="pageSubTitle">With a little bit of jQuery</h2>
+      <h1 class="pageTitle">About.</h1>
+      <h2 class="pageSubTitle">Adaptive Data Obfuscation Strategy.</h2>
     </header>
     <section>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec volutpat tortor a turpis mattis, in blandit orci
