--- a/templates/about.html
+++ b/templates/about.html
@@ -47,8 +47,8 @@
 
   <article class="wrapper">
     <header>
-      <h1 class="pageTitle">Another title</h1>
-      <h2 class="pageSubTitle">With just another subtitle</h2>
+      <h1 class="pageTitle">WriterScript.</h1>
+      <h2 class="pageSubTitle">Beauty of dynamic code.</h2>
     </header>
     <section>
       <p>Proin laoreet molestie mi ac mattis. Curabitur velit lorem, euismod eget leo sed, imperdiet ullamcorper mauris.
@@ -68,8 +68,8 @@
 
   <article class="wrapper">
     <header>
-      <h1 class="pageTitle">Again another title</h1>
-      <h2 class="pageSubTitle">And again another subtitle</h2>
+      <h1 class="pageTitle">Vision</h1>
+      <h2 class="pageSubTitle">More secure communication over insecure networks.</h2>
     </header>
     <section>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec volutpat tortor a turpis mattis, in blandit orci
