--- a/templates/comp.html
+++ b/templates/comp.html
@@ -22,7 +22,7 @@
       <h2 class="pageSubTitle">Lightweight In-memory processing.</h2>
     </header>
     <section>
-      <p>Encoding and encryption may require lots of processing power, as they should when encrypt large data and creating large random numbers.
+      <p>Encoding and encryption may require lots of processing power, as they should when encrypting large data and creating large random numbers.
       </p>
         <p>But NOT when transmitting small data over insecure communication channel on systems with limited capabilities. That's where we will use WiSDOM.
         </p>
@@ -35,7 +35,8 @@
       <h2 class="pageSubTitle"></h2>
     </header>
     <section>
-      <p>Hmmmmm...
+      <p>This is simple, you need secure communication and that extra little peace of mind but cannot afford to use existing cryptographic strategies?
+         <strong> Use WiSDOM.</strong>
       </p>
     </section>
   </article>
