--- a/templates/about.html
+++ b/templates/about.html
@@ -22,27 +22,13 @@
       <h2 class="pageSubTitle">Adaptive Data Obfuscation Strategy.</h2>
     </header>
     <section>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec volutpat tortor a turpis mattis, in blandit orci
-        venenatis. Quisque justo lacus, rutrum mattis tortor et, aliquam auctor risus. Mauris quis elit turpis. Morbi
-        non nisl nunc. Duis elit quam, lobortis eget pretium sed, eleifend eu dui. Sed molestie ornare suscipit.
-        Phasellus facilisis at quam sed tincidunt. Phasellus eget odio laoreet, dictum augue ac, dictum lorem. Nulla
-        facilisi. Phasellus elit augue, cursus eu ante nec, vestibulum adipiscing mi. Nunc adipiscing nibh risus, sed
-        auctor sapien sodales in. Morbi in purus diam. In id consequat velit, eget sodales enim. Nam a massa sed orci
-        blandit interdum eget et ligula. Pellentesque laoreet semper vulputate.</p>
+      <p>WisDOM is a strategic Data Obfuscation Module which takes your sensitive data and converts it into something else. This means that even if your data is intercepted the original content will be secure and the attacker will see something else altogether. You can disguise your Bank Account details as a chapter from Harry Potter and no one would be the wiser. Even if your sensitive data is intercepted chances are that it will be ignored due to its innocuous appearance.
+With increasing use of cyberspace everything is online and thus accessible to attackers. From Private messages to Financial Details everything can be intercepted online. WiSDOM can obfuscate your plaintext/data structure/ binary data (<1MB) into infinite combinations of random data for transmission over insecure internet protocols like HTTP, TELNET and FTP. This can also be extended to store data in databases where heavy encryption algorithms cannot be implemented due to resource constraints.
+</p>
+        <p>WiSDOM is based on WriterScript, an open-source esoteric programming language. and uses its capabilities and strategy to convert data into writerscript code on the go for transmission over the internet.
+</p>
 
-      <p>Proin laoreet molestie mi ac mattis. Curabitur velit lorem, euismod eget leo sed, imperdiet ullamcorper mauris.
-        Fusce posuere dapibus eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ullamcorper massa
-        lectus, et tempor orci dapibus non. Pellentesque id enim commodo, scelerisque augue in, pharetra purus. Donec
-        leo odio, consequat non tellus tincidunt, rhoncus porta urna.</p>
-
-      <p>Aenean tincidunt sed metus et mollis. Pellentesque tristique risus ac suscipit ornare. Sed a tempor nisl. Nam
-        imperdiet mauris vel nunc varius, id volutpat elit porta. Etiam eu consectetur dui. Interdum et malesuada fames
-        ac ante ipsum primis in faucibus. Aenean sollicitudin fermentum nulla, eu ultricies orci imperdiet sed. Cras
-        vitae quam blandit quam volutpat tincidunt vel vel quam. Ut id dictum nisl, nec commodo augue. Donec sed
-        imperdiet arcu, nec ullamcorper ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-        inceptos himenaeos. Duis id egestas est. Pellentesque eleifend, nisi quis eleifend blandit, lacus ligula tempus
-        quam, non sagittis eros tortor vel massa. Duis posuere pellentesque arcu in sollicitudin.</p>
-    </section>
+     </section>
   </article>
 
   <article class="wrapper">
@@ -51,19 +37,11 @@
       <h2 class="pageSubTitle">Beauty of dynamic code.</h2>
     </header>
     <section>
-      <p>Proin laoreet molestie mi ac mattis. Curabitur velit lorem, euismod eget leo sed, imperdiet ullamcorper mauris.
-        Fusce posuere dapibus eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ullamcorper massa
-        lectus, et tempor orci dapibus non. Pellentesque id enim commodo, scelerisque augue in, pharetra purus. Donec
-        leo odio, consequat non tellus tincidunt, rhoncus porta urna.</p>
-
-      <p>Aenean tincidunt sed metus et mollis. Pellentesque tristique risus ac suscipit ornare. Sed a tempor nisl. Nam
-        imperdiet mauris vel nunc varius, id volutpat elit porta. Etiam eu consectetur dui. Interdum et malesuada fames
-        ac ante ipsum primis in faucibus. Aenean sollicitudin fermentum nulla, eu ultricies orci imperdiet sed. Cras
-        vitae quam blandit quam volutpat tincidunt vel vel quam. Ut id dictum nisl, nec commodo augue. Donec sed
-        imperdiet arcu, nec ullamcorper ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-        inceptos himenaeos. Duis id egestas est. Pellentesque eleifend, nisi quis eleifend blandit, lacus ligula tempus
-        quam, non sagittis eros tortor vel massa. Duis posuere pellentesque arcu in sollicitudin.</p>
-    </section>
+      <p>WriterScript is a word count dependent Esoteric Programming Language based on BrainF*ck Logic, that
+      means that we don't have any specific keywords for a operation hence creating a posssibility for infinitely many code for one operation.
+      </p>
+        <p>One of the major takeaway from WS is that the data/program usually looks like a work of literature and not a programming code.</p>
+</section>
   </article>
 
   <article class="wrapper">
@@ -72,27 +50,12 @@
       <h2 class="pageSubTitle">More secure communication over insecure networks.</h2>
     </header>
     <section>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec volutpat tortor a turpis mattis, in blandit orci
-        venenatis. Quisque justo lacus, rutrum mattis tortor et, aliquam auctor risus. Mauris quis elit turpis. Morbi
-        non nisl nunc. Duis elit quam, lobortis eget pretium sed, eleifend eu dui. Sed molestie ornare suscipit.
-        Phasellus facilisis at quam sed tincidunt. Phasellus eget odio laoreet, dictum augue ac, dictum lorem. Nulla
-        facilisi. Phasellus elit augue, cursus eu ante nec, vestibulum adipiscing mi. Nunc adipiscing nibh risus, sed
-        auctor sapien sodales in. Morbi in purus diam. In id consequat velit, eget sodales enim. Nam a massa sed orci
-        blandit interdum eget et ligula. Pellentesque laoreet semper vulputate.</p>
-
-      <p>Proin laoreet molestie mi ac mattis. Curabitur velit lorem, euismod eget leo sed, imperdiet ullamcorper mauris.
-        Fusce posuere dapibus eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ullamcorper massa
-        lectus, et tempor orci dapibus non. Pellentesque id enim commodo, scelerisque augue in, pharetra purus. Donec
-        leo odio, consequat non tellus tincidunt, rhoncus porta urna.</p>
-
-      <p>Aenean tincidunt sed metus et mollis. Pellentesque tristique risus ac suscipit ornare. Sed a tempor nisl. Nam
-        imperdiet mauris vel nunc varius, id volutpat elit porta. Etiam eu consectetur dui. Interdum et malesuada fames
-        ac ante ipsum primis in faucibus. Aenean sollicitudin fermentum nulla, eu ultricies orci imperdiet sed. Cras
-        vitae quam blandit quam volutpat tincidunt vel vel quam. Ut id dictum nisl, nec commodo augue. Donec sed
-        imperdiet arcu, nec ullamcorper ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-        inceptos himenaeos. Duis id egestas est. Pellentesque eleifend, nisi quis eleifend blandit, lacus ligula tempus
-        quam, non sagittis eros tortor vel massa. Duis posuere pellentesque arcu in sollicitudin.</p>
-    </section>
+      <p>With increasing 'digital' in our world of 'digital citizens', data security is paramount.
+      But we are not able to keep up security with the digital expansion, IoT and IoE devices have performance drops on heavy loads and exhibit processing power constraint
+      hence cannot utilise existing encryption standards as they are resource extensive.</p>
+        <p>This is one of the areas where we wanted to do something, plus some other scenarios such as MITM attacks and data sniffing attacks. So we needed something that is not that resource extensive and is hard to predict and doesn't have any specific signature, so we created WiSDOM.</p>
+        <p>Our goal? ; To provide a lightweight but completely new concept of data hiding and obfuscation, this is the second best thing we can do to protect our data over insecure transmission channel if not using data encryption.</p>
+ </section>
   </article>
   <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
