--- a/templates/about.html
+++ b/templates/about.html
@@ -22,7 +22,7 @@
       <h2 class="pageSubTitle">Adaptive Data Obfuscation Strategy.</h2>
     </header>
     <section>
-      <p>WisDOM is a strategic Data Obfuscation Module which takes your sensitive data and converts it into something else. This means that even if your data is intercepted the original content will be secure and the attacker will see something else altogether. You can disguise your Bank Account details as a chapter from Harry Potter and no one would be the wiser. Even if your sensitive data is intercepted chances are that it will be ignored due to its innocuous appearance.
+      <p>WiSDOM is a strategic Data Obfuscation Module which takes your sensitive data and converts it into something else. This means that even if your data is intercepted the original content will be secure and the attacker will see something else altogether. You can disguise your Bank Account details as a chapter from Harry Potter and no one would be the wiser. Even if your sensitive data is intercepted chances are that it will be ignored due to its innocuous appearance.
 With increasing use of cyberspace everything is online and thus accessible to attackers. From Private messages to Financial Details everything can be intercepted online. WiSDOM can obfuscate your plaintext/data structure/ binary data (<1MB) into infinite combinations of random data for transmission over insecure internet protocols like HTTP, TELNET and FTP. This can also be extended to store data in databases where heavy encryption algorithms cannot be implemented due to resource constraints.
 </p>
         <p>WiSDOM is based on WriterScript, an open-source esoteric programming language. and uses its capabilities and strategy to convert data into writerscript code on the go for transmission over the internet.
@@ -38,7 +38,7 @@ With increasing use of cyberspace everything is online and thus accessible to at
     </header>
     <section>
       <p>WriterScript is a word count dependent Esoteric Programming Language based on BrainF*ck Logic, that
-      means that we don't have any specific keywords for a operation hence creating a posssibility for infinitely many code for one operation.
+      means that we don't have any specific keywords for an operation hence creating a possibility for infinitely many code for one operation.
       </p>
         <p>One of the major takeaway from WS is that the data/program usually looks like a work of literature and not a programming code.</p>
 </section>
