--- a/templates/why.html
+++ b/templates/why.html
@@ -23,13 +23,13 @@
     </header>
     <section>
       <p>Let's consider the follwing scenario, Alice and Bob are two netizens just casually communicating over their fav. platform.
-      Mallory is malicious attacker who is listening to the transmission, now there can be one of the two generic cases :-
+      Mallory is a malicious attacker who is listening to the transmission, now there can be one of the two generic cases :-
       </p>
-        <p><strong>1.</strong> Alice and Bob are on insecure protocol like HTTP,FTP or TELNET; All <strong>their data is being sent over in plain text!</strong> so only criteria for Mallory to read their conversation is to know the language they are communicating in.</p>
+        <p><strong>1.</strong> Alice and Bob are on insecure protocol like HTTP, FTP or TELNET; All <strong>their data is being sent over in plain text!</strong> So the only criteria for Mallory to read their conversation is to know the language they are communicating in.</p>
 
-        <p><strong>2.</strong> The second case can be Alice and Bob are using generic secure protocols like HTTPS, TLS and Certificate signing, but they are on Public internet connection that means that Mallory with some technical knowledge can <strong>inject his certificate</strong> in the communication channel and will be able to effectively convert all the HTTPS data to plaintext, rendering the security of HTTPS and similar protocols uneffective.</p>
+        <p><strong>2.</strong> The second case can be Alice and Bob are using generic secure protocols like HTTPS, TLS and Certificate signing, but they are on Public internet connection that means that Mallory with some technical knowledge can <strong>inject his certificate</strong> in the communication channel and will be able to effectively convert all the HTTPS data to plaintext, rendering the security of HTTPS and similar protocols ineffective.</p>
 
-        <p>A generic observation of digital space around us will easily point out thousands of Alices and Bobs risking their critical information to these scenarios. This is want we want to change, if we cannot encrypt the data with heavy, resource extensive and time consuming cryptographic algorithms then we should make the job for attacker so hard that they will move to easier targets.</p>
+        <p>A generic observation of digital space around us will easily point out thousands of Alices and Bobs risking their critical information in similar scenarios. This is want we want to change, if we cannot encrypt the data with heavy, resource extensive and time-consuming cryptographic algorithms then we should make the job for attacker so hard that they will move to easier targets.</p>
 
       </section>
   </article>
@@ -43,8 +43,8 @@
 
       This allows attacker to inject their own certificates into websites and replicate the second scenario we discussed above.</p>
 
-        <p>MITM attacks are generally taken lightly but are critical threat to any security strategy. As proven many times in recent past, attackes are chaining multiple exploits just to MITM leverage on a network.</p>
-<p>This shows the need for new algorithms ands strategies to counter this existing attack model.</p>
+        <p>MITM attacks are generally taken lightly but are a critical threat to any security strategy. As proven many times in recent past, attacks are chaining multiple exploits just to MITM leverage on a network.</p>
+<p>This shows the need for new algorithms and strategies to counter this existing attack model.</p>
        </section>
   </article>
 
@@ -54,9 +54,9 @@
       <h2 class="pageSubTitle">strategically chaotic.</h2>
     </header>
     <section>
-        <p>WiSDOM can obfuscate the any plaintext / data structure / binary data (<1MB) <strong>into infinite combinations</strong> of random data for transmission over insecure internet protocols like HTTP, TELNET and FTP. This can also be extended to store data in databases where heavy encryption algorithms cannot be implemented due to resource constraints.
+        <p>WiSDOM can obfuscate any plaintext / data structure / binary data (<1MB) <strong>into infinite combinations</strong> of random data for transmission over insecure internet protocols like HTTP, TELNET and FTP. This can also be extended to store data in databases where heavy encryption algorithms cannot be implemented due to resource constraints.
 
-WiSDOM is based on WriterScript, an opensource esoteric programming language. and uses it's capabilities and strategy to convert data into writerscript code on the go for transmission over internet.</p>
+WiSDOM is based on WriterScript, an open-source esoteric programming language. and uses its capabilities and strategy to convert data into writerscript code on the go for transmission over internet.</p>
 
     </section>
   </article>
