Added WiSDOM Decoder

--- a/templates/candymain.html
+++ b/templates/candymain.html
@@ -56,7 +56,11 @@
           <li class="foot-box" data-num="3">
             <a href="/creditcard" class="secure-insecure foot-link" data-link="Secure / Insecure"> Credit Card Demo </a>
           </li>
-          <li class="foot-box" data-num="4">
+
+            <li class="foot-box" data-num="4">
+            <a href="/decodeobfsdata" class="maga foot-link" data-link="maga"> Decode </a>
+          </li>
+                      <li class="foot-box" data-num="5">
             <a href="/comp" class="maga foot-link" data-link="maga"> Comparison </a>
           </li>
 
